# AndreiUtils

./: .gitignore  CMakeLists.txt  README.md  hello_world.py  main.cpp  testClassFunctionInheritance.cpp  testConstexprStrings.cpp  testDiamondInheritance.cpp  testDualQuaternionFunctions.cpp  testEigenFunctions.cpp  testFileUtils.cpp  testJsonEigenFunctions.cpp  testJsonFunctions.cpp  testMapFunctions.cpp  testMatching.cpp  testMoveFunctions.cpp  testOpenCVFunctions.cpp  testOpenMPFunctions.cpp  testPerfectForwarding.cpp  testPythonFunctions.cpp  testRealsenseFunctions.cpp  testSerialization.cpp  testSet.cpp  testSlidingWindow.cpp  testSmartPointers.cpp  testStringFunctions.cpp  testStringify.cpp  testSuperCubeFunctions.cpp  testTimeFunctions.cpp  testTypeTraits.cpp  testUserInteraction.cpp  testVectorFunctions.cpp  testVirtualInheritance.cpp  test_all.cpp
cmake/: default-packageConfig.cmake.in  installConfig.cmake  package.pc.in  packageConfig.cmake.in
data/: testConfig1.json  testConfig2.json  testConfig3.json  testExternalConfig1.json  testExternalConfig10.json  testExternalConfig11.json  testExternalConfig12.json  testExternalConfig13.json  testExternalConfig14.json  testExternalConfig15.json  testExternalConfig16.json  testExternalConfig17.json  testExternalConfig18.json  testExternalConfig19.json  testExternalConfig2.json  testExternalConfig20.json  testExternalConfig21.json  testExternalConfig22.json  testExternalConfig3.json  testExternalConfig4.json  testExternalConfig5.json  testExternalConfig6.json  testExternalConfig7.json  testExternalConfig8.json  testExternalConfig9.json  testRootDirExternalConfig1.json  testRootDirExternalConfig16.json  testRootDirExternalConfig17.json  testRootDirExternalConfig19.json  testRootDirExternalConfig2.json  testRootDirExternalConfig3.json  testRootDirExternalConfig5.json
documentation/: Doxyfile
include/: utils.h  utils.hpp  utilsCubemos.h  utilsEigen.h  utilsEigenOpenCV.h  utilsFiles.h  utilsJson.h  utilsOpenCV.h  utilsRealsense.h  utilsString.h  utilsThread.h
include/AndreiUtils/: NetworkData.h  NetworkIncludes.h  utils.h  utils.hpp  utilsArray.hpp  utilsBinarySerialization.hpp  utilsCamera.h  utilsCubemos.h  utilsDualQuaternions.hpp  utilsEigen.h  utilsEigen.hpp  utilsEigenGeometry.h  utilsEigenGeometry.hpp  utilsEigenLeastSquares.h  utilsEigenOpenCV.h  utilsEigenSVD.h  utilsError.h  utilsFiles.h  utilsGeometry.h  utilsImages.h  utilsJson.h  utilsJson.hpp  utilsJsonEigen.hpp  utilsJsonOpenCV.hpp  utilsLimits.h  utilsMap.hpp  utilsMatching.h  utilsOpenCV.h  utilsOpenCV.hpp  utilsOpenCVRealsense.h  utilsOpenMP.h  utilsOpenMP.hpp  utilsOpenpose.h  utilsPThread.h  utilsPose.hpp  utilsQuaternions.hpp  utilsRandom.h  utilsRealsense.h  utilsRealsenseEigen.h  utilsSet.hpp  (+6 more)
include/AndreiUtils/classes/: AnyType.h  Buffer.h  CameraIntrinsicParameters.h  CircularArray.hpp  ConfigurationParameters.hpp  ConstexprString.hpp  CrossBilateralFilter.h  CrossBilateralFilter.hpp  CrossBilateralFilterEigen.h  CrossBilateralFilterOpenCV.h  DualQuaternion.hpp  FifoQueue.hpp  ForkSharedVariable.hpp  GaussianKernel.h  IndexIntervalSeries.h  IndexIntervalSeriesWithData.hpp  Interpolator.hpp  Interval.hpp  LinearInterpolator.hpp  MixedDataContainer.hpp  Parameters.hpp  ParametersWithExternalConfig.hpp  ParametrizablePose.hpp  ParametrizablePoseParameters.hpp  Pointer.hpp  Pointer.tpp  PointerConst.tpp  PoseDecoupledInterpolator.hpp  PoseInterpolator.hpp  PriorityQueue.hpp  PythonInterface.h  QuaternionLowPassFilter.hpp  RandomNumberGenerator.hpp  SlerpInterpolator.hpp  SlidingWindow.hpp  SlidingWindowEigen.hpp  SlidingWindowOpenCV.hpp  SuperCube.hpp  Symmetry.h  TemplateParser.h  (+7 more)
include/AndreiUtils/concepts/: FirstConstSecondNot.hpp  NotAbstract.hpp  NotConst.hpp  StrictSubType.hpp  SubType.hpp  TypesWithSameConst.hpp
include/AndreiUtils/enums/: DepthDataType.h  EigenLeastSquaresSolver.h  EigenSVDSolver.h  ImageDistortionModel.h  InvalidValuesHandlingMode.h  RotationType.h  StabilityCriterionOperation.h  StandardTypes.h  TimeUnit.h
include/AndreiUtils/exceptions/: DebugRequestedException.h  QuitRequestedException.h
include/AndreiUtils/traits/: Container2D.hpp  Container2DEigen.hpp  Container2DOpenCV.hpp  InstanceOf.hpp  get_vector_type_for_convolution.hpp  get_vector_type_for_convolution_eigen.hpp  get_vector_type_for_convolution_opencv.hpp  is_detected.hpp  is_eigen_data.hpp  is_eigen_data_eigen.hpp  (+12 more)
include/andrei_utils/: NetworkData.h  NetworkIncludes.h  utils.h  utils.hpp  utilsJson.h  utilsJsonOpenCV.hpp  utilsOpenCV.h  utilsOpenCV.hpp  utilsOpenpose.h  utilsRealsense.h  utilsTime.h
include/classes/: CircularArray.hpp  PriorityQueue.hpp
include/enums/: DepthDataType.h
json/AndreiUtils/: json.hpp
scripts/: hello_world.py  hello_world_external.py
src/: NetworkData.cpp  NetworkIncludes.cpp  utils.cpp  utilsBinarySerialization.cpp  utilsCamera.cpp  utilsCubemos.cpp  utilsEigen.cpp  utilsEigenGeometry.cpp  utilsEigenLeastSquares.cpp  utilsEigenOpenCV.cpp  utilsEigenSVD.cpp  utilsError.cpp  utilsFiles.cpp  utilsGeometry.cpp  utilsImages.cpp  utilsJson.cpp  utilsJsonEigen.cpp  utilsLimits.cpp  utilsMatching.cpp  utilsOpenCV.cpp  utilsOpenCVRealsense.cpp  utilsOpenMP.cpp  utilsOpenpose.cpp  utilsPThread.cpp  utilsRandom.cpp  utilsRealsense.cpp  utilsRealsenseEigen.cpp  utilsSkeletons.cpp  utilsString.cpp  utilsThread.cpp  utilsTime.cpp
src/classes/: AnyType.cpp  Buffer.cpp  CameraIntrinsicParameters.cpp  ConfigurationParameters.cpp  CrossBilateralFilter.cpp  CrossBilateralFilterEigen.cpp  CrossBilateralFilterOpenCV.cpp  GaussianKernel.cpp  IndexIntervalSeries.cpp  MixedDataContainer.cpp  Parameters.cpp  ParametersWithExternalConfig.cpp  ParametrizablePoseParameters.cpp  PythonInterface.cpp  RandomNumberGenerator.cpp  Symmetry.cpp  TemplateParser.cpp  TimePoint.cpp  Timer.cpp  UnionFind.cpp  UserInteraction.cpp
src/enums/: EigenLeastSquaresSolver.cpp  EigenSVDSolver.cpp  ImageDistortionModel.cpp  InvalidValuesHandlingMode.cpp  StandardTypes.cpp  TimeUnit.cpp
src/exceptions/: DebugRequestedException.cpp  QuitRequestedException.cpp
(+40 files in other folders)
